nginx/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginxpod
  namespace: default
spec:
  host: nginxpod-default.apps-crc.testing
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
